# optiga-esp32-attestation

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ifx_i2c.c.569AD100B9633DA1.idx  ifx_i2c.h.C7079B1BB6311737.idx  ifx_i2c_config.c.FA5429AF65A486EF.idx  ifx_i2c_config.h.115BB6AB4E1F2173.idx  ifx_i2c_data_link_layer.c.1662414878744105.idx  ifx_i2c_data_link_layer.h.663D86FC87A6F53E.idx  ifx_i2c_physical_layer.c.A032CA71EC21874A.idx  ifx_i2c_physical_layer.h.0F1B88BAE05D2647.idx  ifx_i2c_presentation_layer.c.D87B346AFDF49AEE.idx  ifx_i2c_presentation_layer.h.FF04C051A3F770DB.idx  ifx_i2c_transport_layer.c.61289EDEC9E0ECA9.idx  ifx_i2c_transport_layer.h.345A5A56162508D0.idx  main.c.54004122B82A9B4C.idx  optiga_cmd.c.6A771BC8B811F172.idx  optiga_cmd.h.4B4A0F3542E80A6F.idx  optiga_comms.h.C0AAD9E428032F46.idx  optiga_comms_ifx_i2c.c.76BE6807338DAFA4.idx  optiga_crypt.c.593453E6744908E6.idx  optiga_crypt.h.A94F93D4EF299EBB.idx  optiga_demo_attestation.c.5D2A5CB2C10514E9.idx  optiga_demo_attestation.h.851F4BBBC36FA114.idx  optiga_lib_common.c.2EE2110B7B6EA368.idx  optiga_lib_common.h.31DF55D2EED70422.idx  optiga_lib_common_internal.h.919AAB9AE6B7C798.idx  optiga_lib_config.h.D196E0F8D985383D.idx  optiga_lib_config_m_v3.h.0A3CEB8BFF16F865.idx  optiga_lib_logger.c.58F407B995A2F78D.idx  optiga_lib_logger.h.484CF8AC7144FC25.idx  optiga_lib_types.h.038F13898CE1889B.idx  (+29 more)
components/optiga/: CMakeLists.txt
docs/: build.md  design_and_implementation.md  using_the_code_example.md
main/: CMakeLists.txt  main.c  optiga_demo_attestation.c  optiga_demo_attestation.h
(+34 files in other folders)
